# Franka.jl

./: .gitmodules  Project.toml  README.md
cxx/: CMakeLists.txt  frankajl.cc  libfranka-0001-Add-missing-include-s.patch
examples/: constraints.jl  y_compliant_sinusoid.jl
scripts/: build.sh
src/: Franka.jl  generators.jl
src/generators/: joint_goal_motion_generator.jl
